hsreplaynet/static/styles/home_new.scss
@import "variables.scss";

#home-container {
	.container-fluid {
		padding: 0;
	}

	.row {
		margin: 0 auto;
		padding: 0 5px;
	}

	.row.features {
		> div {
			padding: 0;
		}
	}
}

#live-data {
	text-align: center;

	.mode-icon {
		width: 30px;
		height: 30px;
		position: relative;
		top: -2px;
	}

	.animated-list-item {
		> a {
			max-width: 250px;
			flex-grow: 1;
		}

		> span {
			line-height: 34px;
			padding-left: 10px;
			font-weight: bold;
		}

		.player-class {
			padding-left: 35px;
		}
	}
}

#banner {
	height: 175px;
	background-position-x: center;
	background-position-y: 40%;
	display: flex;
	justify-content: center;
	align-items: center;
	box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
}

#banner-content {
	width: 50vw;
	border: 1px solid black;
	background: $blue;
	color: white;
	padding: 10px;
	font-size: 1.5em;
	border-radius: 5px;
}

#banner-icon {
	position: absolute;
	height: 160px;
}

.features {
	max-width: 1540px;

	&:first-of-type {
		padding-top: 15px;
	}

	.feature {
		height: 500px;
		margin: 10px auto;
		max-width: 500px;
		padding: 5px;
		position: relative;

		> * {
			box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16),
				0 3px 6px rgba(0, 0, 0, 0.23);
		}

		.feature-title {
			background: $blue;
			padding: 0 7px;
			position: absolute;
			width: calc(100% - 8px);
			left: 4px;
			color: white;
			font-weight: bold;
			font-size: 1.3em;
			border-radius: 1px;
			line-height: 48px;
			display: flex;
			font-variant: small-caps;

			> span {
				flex: 1 1 0;
			}

			.feature-btn {
				border: 1px solid rgba(0, 0, 0, 0.1);
				background: rgba(255, 255, 255, 0.3);
				color: white;
				margin: 7px 0;
				box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12),
					0 1px 2px rgba(0, 0, 0, 0.24);

				&.active {
					background: rgba(255, 255, 255, 0.4);
					text-decoration: underline;
					font-weight: bold;
				}

				&:hover {
					background: rgba(255, 255, 255, 0.5);

					&.active {
						background: rgba(255, 255, 255, 0.4);
					}
				}
			}
		}

		.feature-content {
			border: 1px solid $blue;
			border-radius: 8px;
			height: 100%;
			padding-top: calc(1.2em + 28px);
			background: #2c2f33;

			&.no-title {
				padding-top: 0;
			}

			.promo-button {
				border: 1px solid rgba(255, 255, 255, 0.2);
			}
		}

		.feature-banner {
			background: rgba(29, 54, 87, 0.9);
			color: white;
			margin-top: 120px;
			padding: 10px 15px 15px 15px;

			> h1 {
				font-weight: bold;
				font-size: 2.2em;
				font-variant: small-caps;
				margin: 0;
			}

			> h2 {
				font-size: 1.3em;
				margin: 0;
			}
		}

		#premium-feature {
			background-image: url("/static/images/premium-background.png");
			background-position-x: center;
			background-position-y: 30%;
			background-repeat: no-repeat;
			background-size: cover;
			border-color: $premium;
			position: relative;

			.header-wrapper {
				align-items: center;
				display: flex;
				height: 50%;
				justify-content: center;
				background: rgba(44, 47, 51, 0.2);
			}

			h1 {
				color: $premium;
				font-size: 3em;
				font-style: italic;
				font-variant: small-caps;
				font-weight: bold;
				margin: 0;
				text-align: center;
				text-shadow: -1px -1px 0 rgba(0, 0, 0, 1),
					-1px 1px 0 rgba(0, 0, 0, 1), 1px 1px 0 rgba(0, 0, 0, 1),
					1px -1px 0 rgba(0, 0, 0, 1);
			}

			.premium-banner {
				background: rgba(44, 47, 51, 0.7);
				border-radius: 0 0 6px 6px;
				color: white;
				display: flex;
				height: 50%;
				position: absolute;
				top: 50%;
				width: 100%;

				> ul {
					margin: auto 0 auto 10px;
				}

				li {
					font-weight: bold;
					font-size: 1.1em;
				}

				.btn-wrapper {
					margin: auto;
					margin-left: 5px;
					flex: 1 1 0;
				}

				.btn {
					font-size: 1em;
					margin: 0 10px;
					padding: 4px 8px;
					width: calc(100% - 20px);

					&:nth-of-type(2) {
						margin-top: 10px;
					}
				}
			}
		}
	}

	.feature-small {
		height: 230px;

		.feature-content {
			background-position-x: center;
			background-position-y: center;
			border: 1px solid $blue;
			display: block;
			text-decoration: none;
		}

		a.feature-content:hover {
			background-color: rgb(20, 20, 20);
			background-blend-mode: screen;
		}
	}

	.premium-feature {
		.feature-title {
			background: $premium;
			color: black;

			.feature-btn {
				color: black;
			}
		}

		.feature-content {
			border-color: $premium;
		}
	}

	.fade {
		height: 20px;
		position: absolute;
		width: 100%;
		opacity: 1;

		&.fade-top {
			top: 0;
			background: linear-gradient(
				to bottom,
				#2c2f33 0%,
				transparent 100%
			);
		}

		&.fade-bottom {
			bottom: 0;
			background: linear-gradient(to top, #2c2f33 0%, transparent 100%);
		}
	}
}

#archetype-highlight {
	width: 100%;
	height: 100%;
	color: white;

	.card-panel {
		height: 285px;
		position: relative;
		overflow: hidden;
		margin-top: 80px;
		opacity: 0.7;

		.card-art {
			flex: 1 1 0;
			height: 512px;
			width: 100%;
			background-position-x: center;
			background-position-y: -70px;
			position: absolute;

			&:nth-of-type(1) {
				left: -25%;
			}

			&:nth-of-type(2) {
				right: -25%;
				-webkit-mask-image: -webkit-gradient(
					linear,
					left top,
					right top,
					color-stop(0, rgba(0, 0, 0, 0)),
					color-stop(15%, rgba(0, 0, 0, 0)),
					color-stop(35%, rgba(0, 0, 0, 1)),
					color-stop(100%, rgba(0, 0, 0, 1))
				);
			}
		}

		.fade {
			height: 70px;
		}
	}

	.archetype-highlight-background {
	}

	.archetype-highlight-content {
		position: absolute;
		top: 55px;
		height: calc(100% - 72px);
		width: calc(100% - 12px);
		display: flex;
		flex-direction: column;
	}

	.best-deck-title {
		margin-top: 17px;

		> h1 {
			font-size: 1.4em;
			font-style: italic;
			margin-left: 20px;
			margin-bottom: 0px;
		}

		.deck-data {
			display: flex;
			justify-content: space-evenly;
			margin-top: -5px;

			> span {
				font-size: 2.3em;
				border-bottom: 1px solid white;
				font-weight: bold;
			}
		}
	}

	.archetype-data {
		flex: 1 1 0;
		text-align: center;
		margin-top: 100px;
		text-shadow: -1px -1px 0 rgba(0, 0, 0, 1), -1px 1px 0 rgba(0, 0, 0, 1),
			1px 1px 0 rgba(0, 0, 0, 1), 1px -1px 0 rgba(0, 0, 0, 1);

		> h1 {
			font-size: 3.5em;
			font-variant: small-caps;
			font-weight: bold;
			margin: 0;
		}

		> h2 {
			font-size: 1.8em;
			margin-top: 15px;
		}
	}
	.archetype-name {
	}

	.promo-button {
		margin: 5px 15px;
		width: calc(100% - 32px);
	}
}

#replay-feed {
	width: 100%;
	height: 100%;
	color: white;
	text-align: center;
	display: flex;
	flex-direction: column;

	h1 {
		font-size: 1.5em;
		margin-top: 10px;
	}

	h4 {
		margin-top: 0;
		font-weight: bold;
	}

	#replay-contributors {
		font-size: 1.2em;
		margin-bottom: 5px;
	}

	.scrolling-feed {
		flex: 1 1 0;
		list-style: none;
		padding: 0;
		overflow: hidden;
		position: relative;

		.feed-item {
			position: absolute;
			width: 100%;
			transition: top 100ms ease-out;
		}
	}

	.replay-feed-item {
		height: 44px;
		border-bottom: 1px solid rgba(255, 255, 255, 0.1);
		margin: 0 10px;
		line-height: 44px;
		display: flex;
		text-decoration: none;
		color: white;

		.replay-feed-player {
			flex: 1 1 0;
			// font-variant: small-caps;
			background-size: contain;
			background-repeat: no-repeat;
			display: flex;
			white-space: nowrap;
			overflow: hidden;
			text-overflow: ellipsis;

			> span {
				flex: 1 1 0;
				overflow: hidden;
				text-overflow: ellipsis;
			}

			&.player-left {
				flex-direction: row-reverse;
				text-align: right;
			}

			&.player-right {
				flex-direction: row;
				text-align: left;
			}
		}

		.rank-icon-standalone {
			width: 44px;
			height: 44px;
			margin: 0;
			flex-basis: 44px;

			> figcaption {
				font-size: 1em;
			}
		}

		.vs-icon {
			height: 20px;
			width: 20px;
			vertical-align: top;
			margin-top: 12px;
		}

		.player-icon {
			color: goldenrod;
			font-weight: bold;
			padding: 0 5px;
			opacity: 0;
			font-size: 1.5em;

			&.winner {
				opacity: 1;
			}
		}

		&:hover {
			background: rgba(255, 255, 255, 0.2);
			cursor: pointer;
		}
	}

	.promo-button {
		margin: 0 15px 15px 15px;
		width: calc(100% - 32px);
	}
}

#class-ranking {
	color: white;
	display: flex;
	flex-direction: column;
	flex: 1 1 0;
	height: 100%;
	list-style: none;
	margin: 0;
	padding: 0;
	text-align: center;
	width: 100%;

	#mode-selection {
		padding: 10px;
	}

	.class-item {
		background-position-x: center;
		background-position-y: 25%;
		border-bottom: 1px solid #2c2f33;
		flex: 1 1 0;

		.class-item-content {
			align-items: center;
			background: linear-gradient(
				to right,
				#2c2f33 0,
				#2c2f33 10%,
				rgba(0, 0, 0, 0.3) 40%
			);
			color: white;
			display: flex;
			height: 100%;
			position: relative;
			transition: background 0.2s linear;
			width: 100%;

			&:hover {
				background: linear-gradient(
					to right,
					#2c2f33 0,
					#2c2f33 10%,
					rgba(0, 0, 0, 0.1) 40%,
					rgba(0, 0, 0, 0.3) 75%
				);
				background-size: 512px;
			}

			&:hover,
			&:active,
			&:focus {
				text-decoration: none;
			}

			.class-index {
				font-size: 2.2em;
				font-weight: bold;
				padding: 0 10px;
			}

			.class-name {
				flex: 1 1 0;
				font-size: 1.7em;
				text-align: left;
				background-size: contain;
				background-repeat: no-repeat;
				padding: 2px 0 2px 43px;
				margin-left: 10px;
				font-variant: small-caps;
				font-weight: bold;
			}

			.winrate-wrapper {
				height: 100%;
				background: rgba(0, 0, 0, 0.5);
				display: flex;
				align-items: center;
			}

			.class-winrate {
				font-size: 1.5em;
				font-weight: bold;
				padding: 0 10px;
				text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.5),
					-1px 1px 0 rgba(0, 0, 0, 0.5), 1px 1px 0 rgba(0, 0, 0, 0.5),
					1px -1px 0 rgba(0, 0, 0, 0.5);
			}

			.view-decks-btn {
				background: $red;
				box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16),
					0 3px 6px rgba(0, 0, 0, 0.23);
				color: white;
				font-size: 0.8em;
				font-weight: bold;
				padding: 3px 6px;
				position: absolute;
				right: 90px;
			}
		}
	}
}

